# PokemonCpp

./: .gitignore  CMakeLists.txt  PokemonCPP.sql  README.md  main.cpp
Classes/Building/: Building.cpp  Building.h
Classes/Building/PokemonCenter/: PokemonCenter.cpp  PokemonCenter.h
Classes/Building/Shop/: Shop.cpp  Shop.h
Classes/EnumLocation/: Location.cpp  Location.h
Classes/Game/: Game.cpp  Game.h
Classes/Item/: Item.cpp  Item.h
Classes/Items/Item/: Item.cpp  Item.h
Classes/Items/Pokeballs/: BallItem.cpp  BallItem.h
Classes/Items/Pokeballs/Hyperball/: Hyperball.cpp  Hyperball.h
Classes/Items/Pokeballs/Pokeball/: Pokeball.cpp  Pokeball.h
Classes/Items/Pokeballs/SuperBall/: SuperBall.cpp
Classes/Items/Pokeballs/Superball/: Superball.cpp  Superball.h
Classes/Items/Potions/: HealItem.cpp  HealItem.h
Classes/Items/Potions/HyperPotion/: HyperPotion.cpp  HyperPotion.h
Classes/Items/Potions/Potion/: Potion.cpp  Potion.h
Classes/Items/Potions/PotionMax/: PotionMax.cpp  PotionMax.h
Classes/Items/Potions/SuperPotion/: SuperPotion.cpp  SuperPotion.h
Classes/Move/: Move.cpp  Move.h
Classes/Pokemon/: Pokemon.cpp  Pokemon.h
Classes/PokemonType/: PokemonType.cpp  PokemonType.h
Classes/Trainer/: Trainer.cpp  Trainer.h
data/Init/: Init.cpp  Init.h
data/Moves/: Moves.cpp  Moves.h
data/Pokeballs/: Pokeballs.cpp  Pokeballs.h
data/PokemonTypes/: pokemonTypes.cpp  pokemonTypes.h
data/Pokemons/: Pokemons.cpp  Pokemons.h
data/Potions/: Potions.cpp  Potions.h
